<resources>
    <string name="app_name">Coffee2_app</string>
    <string name="title_signed_up">Signed-Up</string>
    <string name="title_waitlist">Waitlist</string>
    <string name="title_profile">Profile</string>
    <string name="my_events">My Events</string>
    <string name="add_event">Add Event</string>
    <string name="facility_profile">Facility Profile</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name...</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address...</string>
    <string name="enter_email">Enter Email...</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number...</string>
    <string name="enter_phone_number">Enter Phone Number...</string>
    <string name="save">Save</string>
    <string name="placeholder_event_title">Event Title</string>
    <string name="placeholder_event_description">Description</string>
    <string name="event">Event</string>
    <string name="location">LOCATION</string>
    <string name="time_left">Time Left: XX:XX</string>
    <string name="entries_d">Entries: %d</string>
    <string name="view_entries">View Entries</string>
    <string name="share_qr_code">Create/Share QR Code</string>
    <string name="end_draw">End Draw</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="date_here">Date Here</string>
    <string name="edit">Edit</string>
    <string name="draw_date">Draw Date</string>
    <string name="enter_number">Enter Number...</string>
    <string name="max_entries">Max Entries</string>
    <string name="enable_geolocation">Enable Geolocation</string>
    <string name="publish_event">Publish Event</string>
    <string name="status">STATUS</string>
    <string name="event_date">Event Date</string>
    <string name="event_title">Event Title</string>
    <string name="my_profile">My Profile</string>
    <string name="events">Events</string>
    <string name="profiles">Profiles</string>
    <string name="images">Images</string>
    <string name="user_profiles">User Profiles</string>
    <string name="facilities">Facilities</string>
    <string name="facility">Facility</string>
    <string name="enter_facility_name">Enter Facility Name...</string>
    <string name="organizer_profile">Organizer Profile</string>
    <string name="enter_phone_number_2">Enter Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_address_2">Enter Address</string>
    <string name="back_string">Back</string>
    <string name="enter_max_entrants">Leave Blank for No Limit</string>
    <string name="event_date_string">Event Date</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description...</string>
    <string name="set_date">Set Date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose_image">Choose Image...</string>
    <string name="remove_image">Remove Image</string>
</resources>