<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/admin_navigation_home">

    <fragment
        android:id="@+id/admin_navigation_home"
        android:name="com.example.coffee2_app.Organizer_ui.myevents.MyEventsFragment"
        android:label="@string/profiles"
        tools:layout="@layout/fragment_admin_profiles" />

    <fragment
        android:id="@+id/admin_navigation_events"
        android:name="com.example.coffee2_app.Organizer_ui.addevent.AddEventFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_admin_events" />

    <fragment
        android:id="@+id/admin_navigation_facilities"
        android:name="com.example.coffee2_app.Organizer_ui.profile.ProfileFragment"
        android:label="@string/facilities"
        tools:layout="@layout/fragment_admin_facilities" />

    <fragment
        android:id="@+id/admin_navigation_images"
        android:name="com.example.coffee2_app.Organizer_ui.profile.ProfileFragment"
        android:label="@string/images"
        tools:layout="@layout/fragment_admin_images" />
</navigation>