<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Back/Change Roles Button and Highlighted Title in a Horizontal Layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="8dp"
        android:background="@color/light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Change Roles Button (also Back Button) -->
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:contentDescription="Back"
                android:padding="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/organizer_profile_title"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_text_background"
                android:padding="8dp"
                android:text="@string/add_event"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/event_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:maxHeight="150dp"
            android:maxWidth="200dp"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/event_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:minHeight="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:inputType="text"
            android:minHeight="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/event_date_string"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date_button"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button_bg"
                android:text="Set Date"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/date_here"
                android:textSize="16dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/draw_date"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date_draw_button"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button_bg"
                android:text="@string/set_date"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/event_draw_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/date_here"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/max_entries"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/event_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_max_entrants"
            android:minHeight="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <CheckBox
                android:id="@+id/event_geolocation"
                style="CustomDatePickerDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_geolocation"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_event"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/main_blue"
            />



    </LinearLayout>

</LinearLayout>
