<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/organizer_navigation_home">

    <fragment
        android:id="@+id/organizer_navigation_home"
        android:name="com.example.coffee2_app.Organizer_ui.myevents.MyEventsFragment"
        android:label="@string/my_events"
        tools:layout="@layout/fragment_my_events" />

    <fragment
        android:id="@+id/organizer_navigation_addevent"
        android:name="com.example.coffee2_app.Organizer_ui.addevent.AddEventFragment"
        android:label="@string/add_event"
        tools:layout="@layout/fragment_add_event" />

    <fragment
        android:id="@+id/organizer_navigation_profile"
        android:name="com.example.coffee2_app.Organizer_ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_organizer_profile" />
</navigation>