<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/facility_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Back/Change Roles Button and Highlighted Title in a Horizontal Layout -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- Back Button -->
                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    android:contentDescription="@string/back_string"
                    android:padding="8dp"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/facility_edit_title"
                    android:layout_width="309dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_text_background"
                    android:text="@string/facility_profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/building_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_building"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Facility Name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/facility_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Facility Name"
                android:inputType="text"
                android:minHeight="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/facility_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address_2"
                android:inputType="textPostalAddress"
                android:minHeight="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/facility_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:minHeight="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/phone_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/facility_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number_2"
                android:inputType="phone"
                android:minHeight="32dp"/>

            <Button
                android:id="@+id/edit_profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/main_blue"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>