<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Back/Change Roles Button and Highlighted Title in a Horizontal Layout -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- Back Button -->
                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    android:contentDescription="Back"
                    android:padding="8dp"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/organizer_profile_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_background"
                    android:padding="8dp"
                    android:text="@string/event"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Event Poster -->
        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="Event Poster" />

        <!-- Event Details -->
        <TextView
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/placeholder_event_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_organizer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:text="Organizer Name"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:text="@string/location"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_time_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:text="@string/time_left"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:text="@string/entries_d"
            android:textStyle="bold" />

        <!-- Buttons Section -->
        <Button
            android:id="@+id/event_view_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_bg"
            android:text="@string/view_entries"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/main_blue" />

        <Button
            android:id="@+id/event_share_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_bg"
            android:text="QR code"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/main_blue" />

        <Button
            android:id="@+id/event_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_bg"
            android:backgroundTint="@color/light_grey" />

        <Button
            android:id="@+id/event_end_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_bg"
            android:text="@string/end_draw"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/main_red" />
    </LinearLayout>
</ScrollView>
